--- a/layouts/legal/list.html
+++ b/layouts/legal/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="uk-section uk-section-small">
+<div class="uk-section uk-section-large">
     <div class="uk-container">
         <div>
         <div class="uk-width-1-2@s uk-width-2-5@m">
