--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -110,6 +110,8 @@
             <li class="animate"><a href="{{ .URL | absURL }}" class="uk-text-light">{{ .Name }}</a></li>
             {{ end }}
             {{ end }}
+            <li class="animate"><a href="https://squareup.com/appointments/book/jd3rzd360828sb/6NG934GTKR8Z2/start" class="uk-text-light">Book Now</a></li>
+
         </ul>
     </div>
 </div>
