--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -6,7 +6,7 @@
             <img src="/assets/logo.svg" alt="{{ .Site.Data.profile.company_name }}" width="100" class="white-logo">
             <h1 class="uk-margin-remove uk-white uk-text-uppercase">{{ .Site.Data.home.hero_image.heading }}</h1>
             <p class="uk-margin-medium-bottom">{{ .Site.Data.home.hero_image.body }}</p>
-            <a href="/contact" class="uk-button-secondary uk-button">Get in touch</a>
+            <a href="https://squareup.com/appointments/book/jd3rzd360828sb/6NG934GTKR8Z2/start" class="uk-button-secondary uk-button">Book Now</a>
         </div>
     </div>
 </div>
