Updated 'layouts/partials/global/footer.html' via CloudCannon

--- a/layouts/partials/global/footer.html
+++ b/layouts/partials/global/footer.html
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <div class="uk-width-1-3@s">
-                    <div>
+                    <div class="editable">
                         <h3 class="uk-h3 uk-white uk-text-uppercase">Office Hours</h3>
                         <p>Office is scheduled for weekends only</p>
                         <ul class="uk-list uk-white">
