Updated 2 files via CloudCannon

--- a/layouts/partials/global/footer.html
+++ b/layouts/partials/global/footer.html
@@ -33,13 +33,14 @@
                 <div class="uk-width-1-3@s">
                     <div class="editable">
                         <h3 class="uk-h3 uk-white uk-text-uppercase">Office Hours</h3>
-                        <p>Office is scheduled for weekends only</p>
+                        <p class="present-before-paste">Office is scheduled for weekends only</p>
                         <ul class="uk-list uk-white">
-                            <li><span class="uk-text-bold">Fri:</span> <span>Appointments only</span></li>
-                            <li><span class="uk-text-bold">Sat:</span> <span>Appointments only</span></li>
-                            <li><span class="uk-text-bold">Sun:</span> <span>Appointments only</span></li>
-                        </ul>           
-                        <a href="{{ .Site.Data.profile.booking_link }}" class="accent"><span uk-icon="icon:arrow-right"></span> Book appointment</a>
+                            <li><span class="uk-text-bold"><span><span><span><span></span></span></span></span>Mon - Sun:</span> <span>Appointments only</span></li>
+                        </ul>
+                        <p class="present-before-paste"><a class="accent" href="https://squareup.com/appointments/buyer/widget/jd3rzd360828sb/6NG934GTKR8Z2"><span uk-icon="icon:arrow-right" class="uk-icon"><svg width="20" height="20" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" data-svg="arrow-right">
+                                        <polyline fill="none" stroke="#000" points="10 5 15 9.5 10 14" />
+                                        <line fill="none" stroke="#000" x1="4" y1="9.5" x2="15" y2="9.5" />
+                                    </svg></span> Book appointment</a></p>
                     </div>
                 </div>
             </div>
@@ -63,5 +64,3 @@
         </div>
     </div>
 </footer>
-</body>
-</html>
