--- a/layouts/partials/global/footer.html
+++ b/layouts/partials/global/footer.html
@@ -33,7 +33,7 @@
                 <div class="uk-width-1-3@s">
                     <div class="editable">
                         <h3 class="uk-h3 uk-white uk-text-uppercase">Office Hours</h3>
-                        <p class="present-before-paste">Office is scheduled for weekends only</p>
+                        <p class="present-before-paste">No same day bookings</p>
                         <ul class="uk-list uk-white">
                             <li><span class="uk-text-bold"><span><span><span><span></span></span></span></span>Mon - Sun:</span> <span>Appointments only</span></li>
                         </ul>
